@@ -1001,7 +1001,7 @@ static Image *ReadRGBImage(const ImageInfo *image_info,ExceptionInfo *exception)
   canvas_image=DestroyImage(canvas_image);
   (void) CloseBlob(image);
   if (status == MagickFalse)
-      return(DestroyImageList(image));
+    return(DestroyImageList(image));
   return(GetFirstImageInList(image));
 }
 
